# well-named-in-cpp-J-Suriya

./: .gitignore  CMakeLists.txt  ColorCoder.cpp  ColorCoder.h  ColorPair.cpp  main.cpp  test_ColorCoder.cpp
